--- a/content/Articles/S00013.md
+++ b/content/Articles/S00013.md
@@ -20,6 +20,6 @@ PubAuthorsORCID: 0000-0001-6492-2619
 PMRURL: https://models.physiomeproject.org/workspace/4ac
 PrimaryPaperName: Bond Graph Model of Cerebral Circulation: Toward Clinically Feasible Systemic Blood Flow Simulations. 2018, S. Safaei, P.J. Blanco, L.O. Müller, L.R. Hellevik, P.J. Hunter
 PrimaryPaperURL: https://doi.org/10.3389/fphys.2018.00148
-FulltextURL:
-ArchiveURL:
+FulltextURL: https://physiome.figsh.com/articles/journal_contribution/Bond_Graph_Model_of_Cerebral_Circulation_Toward_Clinically_Feasible_Systemic_Blood_Flow_Simulations_/6854095
+ArchiveURL: https://physiome.figsh.com/articles/journal_contribution/Bond_Graph_Model_of_Cerebral_Circulation_Toward_Clinically_Feasible_Systemic_Blood_Flow_Simulations_/6854095
 Abstract: The primary paper proposed an anatomically detailed model of the human cerebral circulation that runs faster than real-time on a desktop computer and is designed for use in clinical settings when the speed of response is important. Based on a one-dimensional formulation of the flow of an incompressible fluid in distensible vessels, a lumped parameter model was developed for 218 arterial segments. The proposed model improved simulation speed by approximately 200-fold while preserved accuracy.  Bond graph formulation was used to ensure mass and energy conservation. The model predicted the pressure and flow signatures in the body.
