--- a/content/Articles/S00015.md
+++ b/content/Articles/S00015.md
@@ -22,6 +22,6 @@ PubAuthorsORCID: ​
 PMRURL: https://models.physiomeproject.org/workspace/5c6
 PrimaryPaperName: A mathematical model of fatigue in skeletal muscle force contraction. 2007, P.R. Shorten, P. O’Callaghan, J.B. Davidson, T.K. Soboleva
 PrimaryPaperURL: https://doi.org/10.1007/s10974-007-9125-6
-FulltextURL:
-ArchiveURL:
+FulltextURL: https://physiome.figsh.com/articles/journal_contribution/Incorporation_of_sarcolemmal_calcium_transporters_into_the_Shorten_et_al_2007_model_of_skeletal_muscle_equations_coding_and_stability/6853437
+ArchiveURL: https://physiome.figsh.com/articles/journal_contribution/Incorporation_of_sarcolemmal_calcium_transporters_into_the_Shorten_et_al_2007_model_of_skeletal_muscle_equations_coding_and_stability/6853437
 Abstract: We describe a major development of the Shorten et al. (2007) model of skeletal muscle electrophysiology, biochemistry and mechanics. The model was developed by incorporating equations for sarcolemmal transport of calcium ions, including L-type calcium channel, sodium-calcium exchange, calcium pump and background calcium channel. The extended model also includes an addition to the equations for extracellular potassium ion movements to enable the exchange of potassium ions between bulk (plasma) concentration and the interstitial and tubular compartments to be modelled. In further research in an accompanying paper (Tasaki et al, 2019), we succeeded in reproducing muscle cramp, as well as its prevention and reversal, by investigating muscle contraction and cramp using this extended model in comparison with the original model.
